changed sidebar menus

--- a/PharmacyInventoryManagementSystem/Pages/Manage.cshtml
+++ b/PharmacyInventoryManagementSystem/Pages/Manage.cshtml
@@ -13,13 +13,11 @@
             <hr class="sidebar-divider my-0">
             <ul class="navbar-nav text-light" id="accordionSidebar">
                 <li class="nav-item"><a class="nav-link active" href="index.html"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="profile.html"><i class="fas fa-user"></i><span>Profile</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="table.html"><i class="fas fa-table"></i><span>Table</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="login.html"><i class="far fa-user-circle"></i><span>Login</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="register.html"><i class="fas fa-user-circle"></i><span>Register</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="forgot-password.html"><i class="fas fa-key"></i><span>Forgotten Password</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="404.html"><i class="fas fa-exclamation-circle"></i><span>Page Not Found</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="blank.html"><i class="fas fa-window-maximize"></i><span>Blank Page</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="profile.html"><i class="fas fa-user"></i><span>Medicines</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="table.html"><i class="fas fa-table"></i><span>Out of stocks</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="login.html"><i class="far fa-user-circle"></i><span>Receiving</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="register.html"><i class="fas fa-user-circle"></i><span>Suppliers</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="forgot-password.html"><i class="fas fa-key"></i><span>Users</span></a></li>
             </ul>
             <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
         </div>
@@ -82,7 +80,7 @@
                                 <div class="dropdown-menu dropdown-menu-end dropdown-list animated--grow-in">
                                     <h6 class="dropdown-header">alerts center</h6><a class="dropdown-item d-flex align-items-center" href="#">
                                         <div class="dropdown-list-image me-3">
-                                            <img class="rounded-circle" src="assets/img/avatars/avatar4.jpeg">
+                                            <img class="rounded-circle" src="~/img/avatars/avatar4.jpeg">
                                             <div class="bg-success status-indicator"></div>
                                         </div>
                                         <div class="fw-bold">
@@ -100,7 +98,7 @@
                                         </div>
                                     </a><a class="dropdown-item d-flex align-items-center" href="#">
                                         <div class="dropdown-list-image me-3">
-                                            <img class="rounded-circle" src="assets/img/avatars/avatar3.jpeg">
+                                            <img class="rounded-circle" src="~/img/avatars/avatar3.jpeg">
                                             <div class="bg-warning status-indicator"></div>
                                         </div>
                                         <div class="fw-bold">
@@ -109,7 +107,7 @@
                                         </div>
                                     </a><a class="dropdown-item d-flex align-items-center" href="#">
                                         <div class="dropdown-list-image me-3">
-                                            <img class="rounded-circle" src="assets/img/avatars/avatar5.jpeg">
+                                            <img class="rounded-circle" src="~/img/avatars/avatar5.jpeg">
                                             <div class="bg-success status-indicator"></div>
                                         </div>
                                         <div class="fw-bold">
