--- a/PharmacyInventoryManagementSystem/Pages/Shared/_Layout.cshtml
+++ b/PharmacyInventoryManagementSystem/Pages/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Pharmacy Inventory Management System</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/Users/hg_ofthecity/Projects/PharmacyInventoryManagementSystem/PharmacyInventoryManagementSystem/wwwroot/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="~/fonts/font-awesome.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PharmacyInventoryManagementSystem.styles.css" asp-append-version="true" />
 </head>
@@ -18,8 +18,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item nav-link"><a class="nav-link active" asp-area="" asp-page="/Index">Home</a></li>
-                        <li class="nav-item nav-link"><a class="nav-link" asp-area="" asp-page="/Pharmacy/Record">Record</a></li>
-                        <li class="nav-item nav-link"><a class="nav-link" asp-area="" asp-page="/Pharmacy/Manage">Manage</a></li>
+                        <li class="nav-item nav-link"><a class="nav-link" asp-area="" asp-page="/Manage">Manage</a></li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
