created dashboard page

--- a/PharmacyInventoryManagementSystem/Pages/Manage.cshtml
+++ b/PharmacyInventoryManagementSystem/Pages/Manage.cshtml
@@ -12,12 +12,12 @@
             </a>
             <hr class="sidebar-divider my-0">
             <ul class="navbar-nav text-light" id="accordionSidebar">
-                <li class="nav-item"><a class="nav-link active" href="index.html"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="profile.html"><i class="fas fa-user"></i><span>Medicines</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="table.html"><i class="fas fa-table"></i><span>Out of stocks</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="login.html"><i class="far fa-user-circle"></i><span>Receiving</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="register.html"><i class="fas fa-user-circle"></i><span>Suppliers</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="forgot-password.html"><i class="fas fa-key"></i><span>Users</span></a></li>
+                <li class="nav-item"><a class="nav-link active" href="/Manage"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="/Medicines/ManageMedicines"><i class="fas fa-user"></i><span>Medicines</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="/OutOfStocks"><i class="fas fa-table"></i><span>Out of stocks</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="/Receiving"><i class="far fa-user-circle"></i><span>Receiving</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="/Suppliers/ManageSuppliers"><i class="fas fa-user-circle"></i><span>Suppliers</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="/Users/ManageUsers"><i class="fas fa-key"></i><span>Users</span></a></li>
             </ul>
             <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
         </div>
