--- a/PharmacyInventoryManagementSystem/Pages/Shared/_Layout.cshtml
+++ b/PharmacyInventoryManagementSystem/Pages/Shared/_Layout.cshtml
@@ -10,13 +10,6 @@
     <link rel="stylesheet" href="~/PharmacyInventoryManagementSystem.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-light navbar-expand-md" id="mainNav">
-            <div class="container">
-                <a class="navbar-brand" href="#">Ease-Pharmacy</a>
-            </div>
-        </nav>
-    </header>
     <div>
         <main role="main" class="pb-3">
             <div id="wrapper">
@@ -24,7 +17,7 @@
                     <div class="container-fluid d-flex flex-column p-0">
                         <a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="#">
                             <div class="sidebar-brand-icon rotate-n-15"><i class="fas fa-laugh-wink"></i></div>
-                            <div class="sidebar-brand-text mx-3"><span>Brand</span></div>
+                            <div class="sidebar-brand-text mx-3"><span>Ease-Pharmacy</span></div>
                         </a>
                         <hr class="sidebar-divider my-0">
                         <ul class="navbar-nav text-light" id="accordionSidebar">
