--- a/PharmacyInventoryManagementSystem/Pages/Medicines/ManageMedicines.cshtml
+++ b/PharmacyInventoryManagementSystem/Pages/Medicines/ManageMedicines.cshtml
@@ -3,14 +3,14 @@
 @{
 }
 
-<div class="container mb-4 row gap-2">
-    <a class="btn btn-primary col-3" href="/Medicines/CreateMedicine">Add medicine</a>
-    <a class="btn btn-primary col-3" href="/">Create medicine category</a>
-    <a class="btn btn-primary col-3" href="/">Create medicine type</a>
+<div class="container mb-4 row gap-3">
+    <a class="btn btn-primary col-3" href="/Medicines/CreateMedicine/">Add medicine</a>
+    <a class="btn btn-primary col-3" href="/Medicines/ManageMedicineCategory/">Manage medicine category</a>
+    <a class="btn btn-primary col-3" href="/Medicines/ManageMedicineType/">Manage medicine type</a>
 </div>
 
-<div class="container border">
-    <h1 class="h2">List of medicines</h1>
+<div class="container">
+    <h3 class="h3">List of medicines</h3>
     <table class="table">
         <thead>
             <tr>
