tried to retrieve category, type and suppliers into combo box but its failing

--- a/PharmacyInventoryManagementSystem/Pages/Medicines/ManageMedicines.cshtml
+++ b/PharmacyInventoryManagementSystem/Pages/Medicines/ManageMedicines.cshtml
@@ -4,13 +4,13 @@
 }
 
 <div class="container mb-4 row gap-3">
-    <a class="btn btn-primary col-3" href="/Medicines/CreateMedicine/">Add medicine</a>
-    <a class="btn btn-primary col-3" href="/Medicines/ManageMedicineCategory/">Manage medicine category</a>
-    <a class="btn btn-primary col-3" href="/Medicines/ManageMedicineType/">Manage medicine type</a>
+    <a class="btn btn-primary col-sm-3" href="/Medicines/CreateMedicine/">Add medicine</a>
+    <a class="btn btn-primary col-sm-3" href="/Medicines/ManageMedicineCategory/">Manage medicine category</a>
+    <a class="btn btn-primary col-sm-3" href="/Medicines/ManageMedicineType/">Manage medicine type</a>
 </div>
 
 <div class="container">
-    <h3 class="h3">List of medicines</h3>
+    <h3 class="h3 mb-3">List of medicines</h3>
     <table class="table">
         <thead>
             <tr>
