--- a/PharmacyInventoryManagementSystem/Pages/Medicines/CreateMedicine.cshtml
+++ b/PharmacyInventoryManagementSystem/Pages/Medicines/CreateMedicine.cshtml
@@ -4,60 +4,78 @@
 }
 
 <div class="container">
-    <h2>New Medicine</h2>
-    <form method="POST row">
-        <div class="col mb-3">
-            <label class="col-sm-3 col-form-label">Batch No</label>
+    <h2 class="mb-3">New Medicine</h2>
+    <form method="POST" class="row">
+        <div class="col-sm-6 mb-3">
+            <label class="col-form-label">Batch No</label>
             <input type="text" class="form-control" name="batchNo" value="@Model.medicine.batchNo" />
         </div>
-        <div class="col mb-3">
-            <label class="col-sm-3 col-form-label">Name</label>
+        <div class="col-sm-6 mb-3">
+            <label class="col-form-label">Name</label>
             <input type="text" class="form-control" name="medName" value="@Model.medicine.name" />
         </div>
-        <div class="col mb-3">
-            <label class="col-sm-3 col-form-label">Specification</label>
+        <div class="col-sm-6 mb-3">
+            <label class="col-form-label">Specification</label>
             <textarea type="text" class="form-control" name="specification" value="@Model.medicine.specification"></textarea>
         </div>
-        <div class="col mb-3">
-            <label class="col-sm-2 col-form-label">Medicine category</label>
-            <input type="text" class="form-control" name="medCateg" value="@Model.medicine.medCateg" />
+        <div class="col-sm-6 mb-3">
+            <label class="col-form-label">Medicine category</label>
+
+            <select name="medCateg" id="categories" class="form-select">
+                @foreach (var category in Model.categoriesList)
+                {
+                    <option value="@category.category_id">@category.category_name</option>
+                }
+            </select>
         </div>
 
-        <div class="col mb-3">
-            <label class="col-sm-2 col-form-label">Medicine type</label>
-            <input type="text" class="form-control" name="medType" value="@Model.medicine.medType" />
+        <div class="col-sm-6 mb-3">
+            <label class="col-form-label">Medicine type</label>
+
+            <select name="medType" id="types" class="form-select">
+                @foreach (var type in Model.typessList)
+                {
+                    <option value="@type.type_id">@type.type_name</option>
+                }
+            </select>
         </div>
 
-        <div class="col mb-3">
-            <label class="col-sm-2 col-form-label">Supplier</label>
-            <input type="text" class="form-control" name="supplier" value="@Model.medicine.supplier" />
+        <div class="col-sm-6 mb-3">
+            <label class="col-form-label">Supplier</label>
+
+            <select name="supplier" id="suppliers" class="form-select">
+                @foreach (var supplier in Model.suppliersList)
+                {
+                    <option value="@supplier.supplier_id">@supplier.supplier_name</option>
+                }
+            </select>
         </div>
-        <div class="col mb-3">
-            <label class="col-sm-2 col-form-label">Measurement</label>
+        <div class="col-sm-6 mb-3">
+            <label class="col-form-label">Measurement</label>
             <input type="text" class="form-control" name="measurement" value="@Model.medicine.measurement" />
         </div>
-        <div class="col mb-3">
-            <label class="col-sm-3 col-form-label">Remarks (Optional)</label>
+        <div class="col-sm-6 mb-3">
+            <label class="col-form-label">Remarks (Optional)</label>
             <textarea type="text" class="form-control" name="remarks" value="@Model.medicine.remarks"></textarea>
         </div>
-        <div class="col mb-3">
-            <label class="col-sm-2 col-form-label">Price</label>
+        <div class="col-sm-6 mb-3">
+            <label class="col-form-label">Price</label>
             <input type="text" class="form-control" name="price" value="@Model.medicine.price" />
         </div>
-        <div class="col mb-3">
-            <label class="col-sm-2 col-form-label">Retail price</label>
+        <div class="col-sm-6 mb-3">
+            <label class="col-form-label">Retail price</label>
             <input type="text" class="form-control" name="retailPrice" value="@Model.medicine.retailPrice" />
         </div>
-        <div class="col mb-3">
-            <label class="col-sm-2 col-form-label">Quantity on hand</label>
+        <div class="col-sm-6 mb-3">
+            <label class="col-form-label">Quantity on hand</label>
             <input type="text" class="form-control" name="qtyOnHand" value="@Model.medicine.qtyOnHand" />
         </div>
-        <div class="col mb-3">
-            <label class="col-sm-2 col-form-label">Expiry date</label>
+        <div class="col-sm-6 mb-3">
+            <label class="col-form-label">Expiry date</label>
             <input type="date" class="form-control" name="expiryDate" value="@Model.medicine.expiryDate" />
         </div>
 
-        <div class="col">
+        <div class="col-sm-6">
             <button type="submit" class="col-sm-2 btn btn-primary mr-4">Submit</button>
             <a class="col-sm-2 btn btn-outline-danger" href="/Medicines/ManageMedicines">Cancel</a>
         </div>
