added suppliers and users management pages. with some layout changes, changed the icon provider from font awesome to boxicons

--- a/PharmacyInventoryManagementSystem/Pages/Medicines/ManageMedicineType.cshtml
+++ b/PharmacyInventoryManagementSystem/Pages/Medicines/ManageMedicineType.cshtml
@@ -24,7 +24,7 @@
             </div>
         </div>
     </form>
-    <h1 class="h2">List of medicine types</h1>
+    <h3 class="text-dark mb-3">List of medicine types</h3>
 
     <table class="table">
         <thead>
