--- a/PharmacyInventoryManagementSystem/Pages/Medicines/CreateMedicine.cshtml
+++ b/PharmacyInventoryManagementSystem/Pages/Medicines/CreateMedicine.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="container">
-    <h2 class="mb-3">New Medicine</h2>
+    <h3 class="text-dark mb-3">New Medicine</h3>
     <form method="POST" class="row">
         <div class="col-sm-6 mb-3">
             <label class="col-form-label">Batch No</label>
