--- a/PharmacyInventoryManagementSystem/Pages/Medicines/ManageMedicineCategory.cshtml
+++ b/PharmacyInventoryManagementSystem/Pages/Medicines/ManageMedicineCategory.cshtml
@@ -3,10 +3,10 @@
 @{
 }
 
-<div class="container mb-4 row gap-2">
-    <a class="btn btn-primary col-3" href="/Medicines/ManageMedicines/">Manage medicine</a>
-    <a class="btn btn-primary col-3" href="/Medicines/ManageMedicineCategory/">Manage medicine category</a>
-    <a class="btn btn-primary col-3" href="/Medicines/ManageMedicineType/">Manage medicine type</a>
+<div class="container mb-4 row gap-3">
+    <a class="btn btn-primary col-sm-3" href="/Medicines/CreateMedicine/">Add medicine</a>
+    <a class="btn btn-primary col-sm-3" href="/Medicines/ManageMedicineCategory/">Manage medicine category</a>
+    <a class="btn btn-primary col-sm-3" href="/Medicines/ManageMedicineType/">Manage medicine type</a>
 </div>
 
 <div class="container">
@@ -24,7 +24,7 @@
             </div>
         </div>
     </form>
-    <h1 class="h2">List of medicine categories</h1>
+    <h3 class="text-dark mb-3">List of medicine categories</h3>
 
     <table class="table">
         <thead>
