--- a/PharmacyInventoryManagementSystem/Pages/Medicines/ManageMedicines.cshtml
+++ b/PharmacyInventoryManagementSystem/Pages/Medicines/ManageMedicines.cshtml
@@ -10,7 +10,7 @@
 </div>
 
 <div class="container">
-    <h3 class="h3 mb-3">List of medicines</h3>
+    <h3 class="text-dark mb-3">List of medicines</h3>
     <table class="table">
         <thead>
             <tr>
