prepared page for selling medicines

--- a/PharmacyInventoryManagementSystem/Pages/Medicines/ManageMedicineCategory.cshtml
+++ b/PharmacyInventoryManagementSystem/Pages/Medicines/ManageMedicineCategory.cshtml
@@ -4,7 +4,8 @@
 }
 
 <div class="container mb-4 row gap-3">
-    <a class="btn btn-primary col-sm-3" href="/Medicines/CreateMedicine/">Add medicine</a>
+    <a class="btn btn-primary col-sm-2" href="/Medicines/CreateMedicine/">Add medicine</a>
+    <a class="btn btn-primary col-sm-2" href="/Medicines/SellMedicine/">Sell medicine</a>
     <a class="btn btn-primary col-sm-3" href="/Medicines/ManageMedicineCategory/">Manage medicine category</a>
     <a class="btn btn-primary col-sm-3" href="/Medicines/ManageMedicineType/">Manage medicine type</a>
 </div>
