--- a/PharmacyInventoryManagementSystem/Pages/Medicines/SellMedicine.cshtml
+++ b/PharmacyInventoryManagementSystem/Pages/Medicines/SellMedicine.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model PharmacyInventoryManagementSystem.Pages.Medicines.ManageMedicineTypeModel
+@model PharmacyInventoryManagementSystem.Pages.Medicines.SellMedicineModel
 @{
 }
 
@@ -13,11 +13,11 @@
 <div class="container">
     <form method="POST" class="mb-5 mt-6">
         <div class="mb-3">
-            <label class="form-label">Type name</label>
+            <label class="form-label">Category name</label>
 
             <div class="row gap-2">
                 <div class="col">
-                    <input type="text" class="form-control col-3" name="type_name" value="@Model.type.type_name" />
+                    <input type="text" class="form-control col-3" name="category_name" value="@Model.category.category_name" />
                 </div>
                 <div class="col">
                     <button type="submit" class="btn btn-success col-3">Create</button>
@@ -25,12 +25,12 @@
             </div>
         </div>
     </form>
-    <h3 class="text-dark mb-3">List of medicine types</h3>
+    <h3 class="text-dark mb-3">List of medicine categories</h3>
 
     <table class="table">
         <thead>
             <tr>
-                <th>Type name</th>
+                <th>Category name</th>
                 <th>Created date</th>
                 <th>Creator</th>
                 <th>Actions</th>
@@ -38,15 +38,15 @@
         </thead>
 
         <tbody>
-            @foreach (var type in Model.listTypes)
+            @foreach (var category in Model.listCategories)
             {
                 <tr>
-                    <td>@type.type_name</td>
-                    <td>@type.created_date</td>
-                    <td>@type.creator</td>
+                    <td>@category.category_name</td>
+                    <td>@category.created_date</td>
+                    <td>@category.creator</td>
                     <td>
-                        <a href="/Patients/edit?id=@type.type_id" class="btn btn-warning">Edit</a>
-                        <a href="/Patients/delete?id=@type.type_id" class="btn btn-danger">Delete</a>
+                        <a href="/Patients/edit?id=@category.category_id" class="btn btn-warning">Edit</a>
+                        <a href="/Patients/delete?id=@category.category_id" class="btn btn-danger">Delete</a>
                     </td>
                 </tr>
             }
