implemented edit, delete of medecines

--- a/PharmacyInventoryManagementSystem/Pages/Medicines/ManageMedicineCategory.cshtml
+++ b/PharmacyInventoryManagementSystem/Pages/Medicines/ManageMedicineCategory.cshtml
@@ -37,7 +37,7 @@
             </tr>
         </thead>
 
-        <tbody>
+        <tbody id="mybody">
             @foreach (var category in Model.listCategories)
             {
                 <tr>
