--- a/PharmacyInventoryManagementSystem/Pages/Shared/_Layout.cshtml
+++ b/PharmacyInventoryManagementSystem/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,6 @@
                             <li class="nav-item"><a class="nav-link active" href="/"><i class='bx bxs-dashboard'></i><span>Dashboard</span></a></li>
                             <li class="nav-item"><a class="nav-link" href="/Medicines/ManageMedicines/"><i class='bx bxs-capsule'></i><span>Medicines</span></a></li>
                             <li class="nav-item"><a class="nav-link" href="/Reports/OutOfStocks/"><i class='bx bx-package'></i><span>Out of stocks</span></a></li>
-                            <li class="nav-item"><a class="nav-link" href="/Reports/Receiving/"><i class='bx bx-table'></i><span>Receiving</span></a></li>
                             <li class="nav-item"><a class="nav-link" href="/Suppliers/ManageSuppliers/"><i class='bx bxs-buildings'></i><span>Suppliers</span></a></li>
                             <li class="nav-item"><a class="nav-link" href="/Users/ManageUsers/"><i class='bx bxs-user'></i><span>Users</span></a></li>
                         </ul>
@@ -135,7 +134,7 @@
                                     <div class="d-none d-sm-block topbar-divider"></div>
                                     <li class="nav-item dropdown no-arrow">
                                         <div class="nav-item dropdown no-arrow">
-                                            <a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="d-none d-lg-inline me-2 text-gray-600 small">Valerie Luna</span><img class="border rounded-circle img-profile" src="~/img/avatars/avatar1.jpeg"></a>
+                                            @*<a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="d-none d-lg-inline me-2 text-gray-600 small">Valerie Luna</span><img class="border rounded-circle img-profile" src="~/img/avatars/avatar1.jpeg"></a>*@
                                             <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in">
                                                 <a class="dropdown-item" href="#"><i class='bx bxs-user me-2 text-gray-400'></i>&nbsp;Profile</a><a class="dropdown-item" href="#"><i class='bx bxs-cog text-gray-400'></i>&nbsp;Settings</a><a class="dropdown-item" href="#"><i class='bx bxs-report me-2 text-gray-400'></i>&nbsp;Activity log</a>
                                                 <div class="dropdown-divider"></div><a class="dropdown-item" href="#"><i class='bx bx-log-out me-2 text-gray-400'></i>&nbsp;Logout</a>
